--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -9,7 +9,7 @@
           </div>
           <div class="profile-details">
             <h2>{{user.firstName}} {{user.lastName}}</h2>
-            <p class="username">{{'@' + user.userId}}</p>
+            <p class="username">{{'@' + user.username}}</p>
           </div>
         </div>
       </div>
