--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,4 +1,12 @@
 @if (user(); as user) {
+
+  
+  <script>
+    window.Telegram.WebApp.showAlert('Hey there!');
+    console.log("hey there should be displayed")
+</script>
+
+
   <div class="profile-container">
     <div class="profile-card">
       <!-- Header -->
