--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
-<div class="app-container">
+<div class="app-content">
   <router-outlet></router-outlet>
-  <app-bottom-nav></app-bottom-nav>
 </div>
